style.css
/* ... */
.annoyedCatDiv img {
    opacity: 0.8;
    rotate: 180deg;
}

.annoyedCatDiv h1 {
    font-family: var(--StandardTextFont);
    font-display: swap;
    font-weight: 800;
    color: var(--OPPsolidCol2);
    text-align: center;
    margin-top: 20px;
}

.appIcon {
    width: 40px;
    display: flex;
    margin: auto 10px;
    justify-content: center;
    align-items: center;
    transition: 0.3s scale ease-in-out;
}

.appIcon:active {
    scale: 0.90;
}

.nerdLinks {
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 0 5px 5px 5px;
    font-family: var(--StandardTextFont);
    font-display: swap;
    font-weight: 300;
    font-size: 0.75em;
    text-decoration: underline 1px var(--OPPsolidCol2);
}

a {
    text-decoration: underline 1px var(--OPPsolidCol2);
    color: var(--OPPsolidCol4);
}

.switch-container input,
.switch-container label,
.switch-container button {
    /* height: 40px; */
    display: flex;
    align-items: center;
    /* font-weight: 500; */
    margin: 5px 10px;
    text-align: center;
}

#resetAllDataBtn {
    padding: 5px 10px;
    justify-content: center;
}

.importExportBtnContainer {
    display: flex;
    margin: 5px 10px;
    margin-left: auto;
    flex-direction: row;
    justify-content: right;
    width: fit-content;
}

.importExportBtnContainer button {
    margin: 0px 0.5px;
    border-radius: 0 150px 150px 0;
    width: 100%;
}

#exportDialogBox,
#importDialogBox {
    animation: appTab 0.3s ease;
    display: none;
    border: solid 2px;
    border-color: var(--OPPtranspCol4);
    margin: -5px 5px 0 5px;
    border-radius: 7px 7px 15px 15px;
    justify-content: space-between;
}

#importDialogBox {
    flex-wrap: wrap;
    padding: 8px;
}

#importDialogBox select {
    text-align: center;
    padding: 5px 0;
    margin: 0;
    width: 40%;
}

#importDialogBox input {
    text-align: left;
    padding: 5px;
    margin: 0;
    width: 53%;
}

#importDialogBox button {
    width: 100%;
    margin: 8px 0 0 0;
    border-radius: 10px;
    justify-content: center;
}

#exportDialogBox select {
    text-align: center;
}

#exportDialogBox select,
#exportDialogBox label {
    padding: 0;
    margin: 10px;
}

#importDataBtn {
    border-radius: 150px 0 0 150px;
}

#themeSelection,
#timeInput {
    margin-left: auto;
    border: solid 1px;
    border-color: var(--solidAccentColor2);
    text-overflow: clip;
    width: 80%;
}

.importExportBtnContainer span {
    height: 27px;
    display: flex;
    align-items: center;
    font-size: 24px;
}

.alignToRight {
    justify-content: right;
}

.switch-label {
    grid-column: 1;
    font-family: Noto Sans;
    text-align: left;
    font-weight: 400;
    margin: 0 10px 0 10px;
    color: var(--OPPsolidCol2);
    font-size: 1.2em;
}

.switch {
    grid-column: 2;
    justify-self: end;
}

.switch-input {
    display: none !important;
}

.switch-toggle {
    position: relative;
    display: inline-block;
    width: 65px;
    height: 40px;
    background-color: var(--solidCol4);
    border-radius: 20px;
    cursor: pointer;
}

.switch-toggle:before {
    content: '';
    position: absolute;
    top: 5px;
    left: 5px;
    width: 30px;
    height: 30px;
    background-color: #fff;
    border-radius: 50%;
    transition: transform 0.3s;
}

.switch-input:checked+.switch-toggle {
    background-color: var(--transAccentColor1);
}

.switch-input:checked+.switch-toggle:before {
    transform: translateX(25px);
}

#themeSelection {
    margin-top: 7.5px;
    margin-bottom: 7.5px;
    height: 35px;
}

#timeInput {
    width: fit-content;
    font-family: var(--StandardTextFont);
    font-display: swap;
}


@media (display-mode: standalone) {
    body {
        overscroll-behavior: none;
        user-select: none;
    }
}


/* ----------  DESKTOP SCREEN  ---------- */

@media screen and (min-width: 1000px) {

    body {
        margin: 0 auto;
        width: 32.4vw;
        height: 72vw;
        border-radius: 20px;
    }

    #navbar {
        width: fit-content;
        padding: 10px;
        border-top: none;
        border: solid 2px;
        border-color: var(--boxBorderColor);
        display: flex;
        bottom: 50%;
        left: 27vw;
        transform: translateY(50%) translateX(-50%);
        border-radius: 30px;
        position: fixed;
        height: fit-content;
        flex-direction: column;
    }

    .navbarLabelActive {
        font-weight: 400;
    }

    .navbarBtn {
        margin: 20px 10px;
    }

    #navbarFixed {
        display: none;
    }

    .topNotchContainer {
        display: flex;
        position: relative;
        width: 29vw;
        border-radius: 20px;
        padding: 10px;
        margin: 10px auto 10px auto;
    }

    .topNotchFixed {
        display: none;
    }

}

